--- a/Mcv3/appsettings.json
+++ b/Mcv3/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Mcv3Context": "Server=(localdb)\\mssqllocaldb;Database=Mcv3Context-4b4470f4-d662-4b29-a5af-da476208d467;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
